--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -252,7 +252,7 @@ msgstr "Seqüència"
 
 msgctxt "field:contract.line,service:"
 msgid "Service"
-msgstr "Serveis"
+msgstr "Servei"
 
 msgctxt "field:contract.line,start_date:"
 msgid "Start Date"
